--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "license": "MIT",
   "devDependencies": {
     "vuepress": "^1.5.3"
+  },
+  "dependencies": {
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.4"
   }
 }
