--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vuepress": "^1.5.3"
   },
   "dependencies": {
+    "@bimdata/design-system": "0.0.41",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.4"
   }
