add dotenv and inject into themeConfig
+ move deps into dev deps

--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "vuepress": "^1.5.3"
-  },
-  "dependencies": {
+    "vuepress": "^1.5.3",
     "@bimdata/design-system": "0.0.42",
+    "dotenv": "^8.2.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.4"
   }
