reorganise api doc

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-API_URL="https://www.api-staging.bimdata.io"
+API_URL=https://www.api-staging.bimdata.io
+CONNECT_URL=https://connect-staging.bimdata.io
