add embed swagger ui

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@bimdata/design-system": "0.0.42",
     "dotenv": "^8.2.0",
     "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.4"
+    "sass-loader": "^10.0.4",
+    "swagger-ui": "^3.36.2"
   }
 }
