ci: force pull base image

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Documentation
+name: main
 
 on: push
 
@@ -33,6 +33,7 @@ jobs:
           context: .
           file: etc/Dockerfile
           push: true
+          pull: true
           tags: |
             docker-registry.bimdata.io/bimdata/${{ env.app }}:${{ github.sha }}
             docker-registry.bimdata.io/bimdata/${{ env.app }}:${{ steps.tag.outputs.tag }}
