--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "license": "MIT",
   "devDependencies": {
     "@bimdata/design-system": "0.3.13",
-    "node-sass": "^6.0.0",
+    "sass": "^1.56.1",
     "sass-loader": "^10.0.1",
     "swagger-ui": "^3.50.0",
     "swagger-ui-dist": "^3.50.0",
-    "vuepress": "^1.8.2"
+    "vuepress": "^1.9.7"
   }
 }
