--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASS }}
       - id: tag
         name: Get docker tag
-        uses: bimdata/actions/get-docker-tag@v1
+        uses: bimdata/actions/get-docker-tag@v2
         with:
           branch: ${{ github.ref }}
       - name: Build and push
@@ -36,7 +36,7 @@ jobs:
           pull: true
           tags: |
             docker-registry.bimdata.io/bimdata/${{ env.app }}:${{ github.sha }}
-            docker-registry.bimdata.io/bimdata/${{ env.app }}:${{ steps.tag.outputs.tag }}
+            docker-registry.bimdata.io/bimdata/${{ env.app }}:${{ env.tag }}
   deploy:
     runs-on: self-hosted
     needs: build-and-push
@@ -49,12 +49,12 @@ jobs:
           password: ${{ secrets.DOCKER_PASS }}
       - id: tag
         name: Get docker tag
-        uses: bimdata/actions/get-docker-tag@v1
+        uses: bimdata/actions/get-docker-tag@v2
         with:
           branch: ${{ github.ref }}
-      - name: Deploy on ${{ steps.tag.outputs.tag }}
+      - name: Deploy on ${{ env.tag }}
         uses: bimdata/actions/deployment@v1
         with:
-          inventory: ${{ steps.tag.outputs.tag }}
+          inventory: ${{ env.tag }}
           app: ${{ env.app }}
           vault-pass: ${{ secrets.ANSIBLE_VAULT_PASSWD }}
