--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@bimdata/design-system": "0.3.13",
+    "@bimdata/design-system": "2.0.0-rc.11",
     "sass": "^1.56.1",
     "sass-loader": "^10.0.1",
     "swagger-ui": "^3.50.0",
