--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Documentation",
+  "name": "documentation",
   "version": "0.0.1",
   "description": "BIMData documentation",
   "main": "index.js",
