--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@bimdata/design-system": "0.3.13",
-    "sass": "^1.56.1",
-    "sass-loader": "^10.0.1",
-    "swagger-ui": "^5.12.0",
-    "swagger-ui-dist": "^4.1.3",
-    "vuepress": "^1.9.7"
+    "@bimdata/design-system": "0.3.20",
+    "sass": "^1.77.8",
+    "sass-loader": "^10.5.2",
+    "swagger-ui": "^5.17.14",
+    "swagger-ui-dist": "4.1.3",
+    "vuepress": "^1.9.10"
   }
 }
